[package]
name = "tow"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
futures-util = "0.3.21"
indicatif = "0.16.2"
log = "0.4.16"
reqwest = { version = "0.11.10", features = ["stream"] }
stderrlog = "0.5.1"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
