[package]
name = "tow"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0.0"
futures-util = "0.3.21"
indicatif = "0.16.2"
log = "0.4.16"
mockito = "0.31.0"
reqwest = { version = "0.11.10", features = ["stream"] }
stderrlog = "0.5.1"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-test = "0.4.2"
url = "2.2.2"
